...
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/test_rect"
            app:layout_constraintBottom_toTopOf="@id/eventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/eventName"
...
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventName" />

        <EditText
            android:id="@+id/eventPageAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
...
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/eventPageAddressEditText">

            <TextView
                android:id="@+id/eventAddActivity_StartDate_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1.5"

...
                android:textSize="15sp"

                android:onClick="initStartDatePickerClick"
                />

            <TextView
                android:id="@+id/eventAddActivity_eventStartTime_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"

                android:layout_marginEnd="30dp"
                android:layout_weight="1.5"
...
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/eventPageTimeInLayout">

            <TextView
                android:id="@+id/eventAddActivity_eventEndDate_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1.5"

...
                android:textSize="15sp"

                android:onClick="initEndDatePickerClick"
                />

            <TextView
                android:id="@+id/eventAddActivity_eventEndTime_EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"

                android:layout_marginEnd="30dp"
                android:layout_weight="1.5"
...
        <LinearLayout
            android:id="@+id/eventMaxAttendeeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/eventPageDescriptionEditText"
            app:layout_constraintTop_toBottomOf="@+id/eventPageTimeOutLayout">

            <EditText
                android:id="@+id/editMaxAttendeeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"

                android:layout_marginEnd="2dp"
                android:layout_weight="2"
...
            android:layout_marginStart="30dp"
            android:text="Cancel"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="5dp"
            />
        <Button
            android:id="@+id/eventPageSaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="30dp"
            android:text="Save"
            android:backgroundTint="@color/black"
...
