<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".organizer.OrganizerActivity"
    android:background="@color/white"
    android:weightSum="10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:backgroundTint="@color/black"
            android:clickable="true"
            app:fabCustomSize="45dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/SwiftCheckInTitleOrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SwiftCheckIn"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/back_button_org"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SwiftCheckInTitleOrg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_rounded_black"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/organizer_mode_string"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:divider="@null"
        app:layout_constraintTop_toBottomOf="@+id/border"
        tools:layout_editor_absoluteX="4dp" />

    <LinearLayout
        android:id="@+id/add_event_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/black"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_event_plus" />
    </LinearLayout>

</LinearLayout>