...
            android:textStyle="bold"

            android:layout_marginTop="30dp"
            />

        <Button
            android:id="@+id/fragmentQrCodeMenu1NewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintWidth_percent="0.7"
            app:layout_constraintTop_toBottomOf="@id/fragmentQrCodeMenu1Title"
            app:layout_constraintStart_toStartOf="parent"
...
                android:layout_height="wrap_content"
                android:text="Share"
                android:layout_marginTop="2dp"
                android:textSize="20sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/qrCodeSelectionSuccessLayout_saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Save and Close"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
...
